Fix contrast issues

--- a/_sass/layouts/_indicator.scss
+++ b/_sass/layouts/_indicator.scss
@@ -394,7 +394,7 @@
       .indicator-cards a {
         padding: 0;
         margin-bottom: 1.5rem;
-        color: #337ab7;
+        color: #044b88;
 
         .tags li{
           color: #044b88;
